--- a/django/user log in out auth/todo/todoapp/templates/includes/base.html
+++ b/django/user log in out auth/todo/todoapp/templates/includes/base.html
@@ -1,4 +1,9 @@
-{% load static %}
+<ul>
+  {% for message in messages %}
+    <li class="{{ message.tags }}">{{ message }}</li>
+  {% endfor %}
+</ul>
+v{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
